--- a/Homepage.html
+++ b/Homepage.html
@@ -47,11 +47,11 @@
     <h1> Brando's Boards </h1>
     <h2> For all your surfboarding needs </h2>
     <center>
-        <img src="/Users/jobran/Desktop/cs20/HW2/beach.jpg" width="1200">
+        <img src="beach.jpg" width="1200">
     </center>
-    <img src="/Users/jobran/Desktop/cs20/HW2/surfboard.jpeg" width="400">
-    <img src="/Users/jobran/Desktop/cs20/HW2/multiboard.jpg" width="400">
-    <img src="/Users/jobran/Desktop/cs20/HW2/simon.jpg" width="400">
+    <img src="surfboard.jpeg" width="400">
+    <img src="multiboard.jpg" width="400">
+    <img src="simon.jpg" width="400">
     <footer>
         <p>Created By: Joel B</p>
         <p><a href="email">fakeEmail@gmail.com</a></p>
