update image links

--- a/Products.html
+++ b/Products.html
@@ -34,7 +34,7 @@
             }
             body {
                 background-image:
-                url('/Users/jobran/Desktop/cs20/HW2/1.jpg.webp');
+                url(1.jpg.webp');
             }
 		</style>
 </head>
@@ -52,7 +52,7 @@
     <h2> Board Accessories</h2>
     <h2> Wet Suits</h2>
     <center>
-        <img src="/Users/jobran/Desktop/cs20/HW2/equipment.png" width="500">
+        <img src="equipment.png" width="500">
     </center>
     <br> <br> <br>
     <footer>
