Update image links

--- a/Contact.html
+++ b/Contact.html
@@ -37,7 +37,7 @@
             }
             body {
                 background-image:
-                url('/Users/jobran/Desktop/cs20/HW2/1.jpg.webp');
+                url('1.jpg.webp');
             }
 
 		</style>
@@ -52,7 +52,7 @@
     <h1> Contact </h1>
     
     <center>
-        <img src="/Users/jobran/Desktop/cs20/HW2/backflip.jpg" width="400">
+        <img src="backflip.jpg" width="400">
     </center>
     
     <h2> Joel is an avid surfer who loves spending time on the water.
