--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
         }
         body {
             background-image:
-            url('/Users/jobran/Desktop/cs20/HW2/1.jpg.webp');
+            url('1.jpg.webp');
         }
 	</style>
 </head>
 
 <body>
     <div class="topnav">
-        <a href="#home">Home</a>
-        <a href="#products">Products</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="#Products.html">Products</a>
+        <a href="#Contact.html">Contact</a>
     </div>
     <h1> Brando's Boards </h1>
     <h2> For all your surfboarding needs </h2>
