--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <body>
     <div class="topnav">
         <a href="index.html">Home</a>
-        <a href="#Products.html">Products</a>
-        <a href="#Contact.html">Contact</a>
+        <a href="Products.html">Products</a>
+        <a href="Contact.html">Contact</a>
     </div>
     <h1> Brando's Boards </h1>
     <h2> For all your surfboarding needs </h2>
