--- a/Contact.html
+++ b/Contact.html
@@ -45,9 +45,9 @@
 
 <body>
     <div class="topnav">
-        <a href="#home">Home</a>
-        <a href="#products">Products</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="Products.html">Products</a>
+        <a href="Contact.html">Contact</a>
     </div>
     <h1> Contact </h1>
     
