--- a/Products.html
+++ b/Products.html
@@ -41,9 +41,9 @@
 
 <body>
     <div class="topnav">
-        <a href="#home">Home</a>
-        <a href="#products">Products</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="Products.html">Products</a>
+        <a href="Contact.html">Contact</a>
     </div>
     <h1> Products </h1>
     <h2> Small Boards</h2>
