--- a/Products.html
+++ b/Products.html
@@ -34,7 +34,7 @@
             }
             body {
                 background-image:
-                url(1.jpg.webp');
+                url('1.jpg.webp');
             }
 		</style>
 </head>
