--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
     <center>
         <img src="beach.jpg" width="1200">
     </center>
-    <img src="surfboard.jpeg" width="400">
-    <img src="multiboard.jpg" width="400">
-    <img src="simon.jpg" width="400">
+    <center>
+    	<img src="surfboard.jpeg" width="400">
+    	<img src="multiboard.jpg" width="400">
+    	<img src="simon.jpg" width="400">
+    </center>
     <footer>
         <p>Created By: Joel B</p>
         <p><a href="email">fakeEmail@gmail.com</a></p>
