--- a/Products.html
+++ b/Products.html
@@ -47,7 +47,7 @@
     </div>
     <h1> Products </h1>
     <h2> Small Boards</h2>
-    <h2> Meidum Boards </h2>
+    <h2> Medium Boards </h2>
     <h2> Big Boards </h2>
     <h2> Board Accessories</h2>
     <h2> Wet Suits</h2>
