--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title> Brando's BoardsL: Home </title>
+	<title> Brando's Boards: Home </title>
     <style type="text/css">
         h1 {text-align: center; font-size: 50px; color:#2592F7;}
         h2 {text-align: center; font-size: 25px; color:#00477A;}
