--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
             margin-right: auto;
             width: 50%;
         }
+	.imgcntr {
+            text-align: center;
+            overflow: hidden;
+        }    
         body {
             background-image:
             url('1.jpg.webp');
-        }
+	}
 	</style>
 </head>
 
@@ -46,12 +50,12 @@
     </div>
     <h1> Brando's Boards </h1>
     <h2> For all your surfboarding needs </h2>
-    <center>
+    <div class="imgcntr">
         <img src="beach.jpg" width="1400">
         <img src="surfboard.jpeg" width="400">
         <img src="multiboard.jpg" width="400">
         <img src="simon.jpg" width="400">
-    </center>
+    </div>
     <footer>
         <p>Created By: Joel B</p>
         <p><a href="email">fakeEmail@gmail.com</a></p>
